# onnxruntime-c-api

./: .gitattributes  CMakeLists.txt  ClassExample.cpp  OrtInference.cpp  OrtInference.h  README.md  fnctionalExample.cpp  main.cpp  run.cpp  toolchain_aarch64.cmake  toolchain_arm32.cmake  toolchain_mac.cmake  toolchain_mingw64.cmake
libs/onnxruntime-linux-aarch64-1.15.1/lib/: libonnxruntime.so.1.15.1
libs/onnxruntime-linux-arm-1.19.0/lib/: libonnxruntime.so.1.19.0
libs/onnxruntime-osx-x86_64-1.15.1/lib/: libonnxruntime.1.15.1.dylib
libs/onnxruntime-win-x64-1.15.1/lib/: onnxruntime.lib  onnxruntime_providers_shared.lib
release/build-aarch64/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  main
release/build-aarch64/.cmake/api/v1/reply/: cache-v2-5b7675046c69d8d7a8b6.json  cmakeFiles-v1-dfcad6a0f188cf5ac57e.json  codemodel-v2-5e9601dc76745e1e305e.json  index-2024-06-12T13-58-15-0155.json  target-main-Debug-248abf2e8a6852127f53.json  toolchains-v1-7c7a8091914df2264535.json
release/build-aarch64/data/: svc_cls_backlash.onnx
release/build-arm32/: CMakeCache.txt  cmake_install.cmake  compile_commands.json  main
release/build-arm32/.cmake/api/v1/reply/: cache-v2-d24b683033a9d6f73a4a.json  cmakeFiles-v1-64e2e051fc5d4cdf63fb.json  codemodel-v2-5fe1615c3ae42d74b259.json  index-2024-06-13T01-08-29-0002.json  target-main-Debug-82792950629b5bcf5801.json  toolchains-v1-2ad46fdc006167205cd8.json
release/build-mac/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  main
release/build-mac/.cmake/api/v1/reply/: cache-v2-66416232705a966b9966.json  cmakeFiles-v1-777effb4d4d89f19b6b2.json  codemodel-v2-625355c195eb89a5a788.json  index-2024-06-29T14-36-46-0933.json  target-main-Debug-2b22b7cde38e78b627d1.json
release/build-mac/data/: lgbm_cls_backlash.onnx  svc_iris.onnx
